<resources>
    <string name="app_name">GalacticTroopers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="galactic_troopers_game_logo">Galactic troopers game logo</string>
    <string name="start_game_of_galactic_troopers">Start game of galactic troopers</string>
    <string name="blue_spaceship">blue spaceship</string>
    <string name="pink_spaceship">pink spaceship</string>
    <string name="yellow_spaceship">yellow spaceship</string>
    <string name="purple_spaceship">purple spaceship</string>
    <string name="start_game_of_galactic_troopers_clicked" />
</resources>